Modif sur l'index, seconde section

--- a/index.html
+++ b/index.html
@@ -91,6 +91,24 @@
                     </ul>
                 </div>
             </div>
+            <div class="bg-gray">
+                <div class="row bloc-dev-qualifies">
+                    <div class="my-width-40">
+                        <diV>
+                            <img class="img-back" src="img/illustrations/texaf_campus.jpg" alt="" srcset="">
+                        </diV>
+                        <diV>
+                            <img class="img-befor" src="img/illustrations/kda_cohorte_2020.jpg" alt="" srcset="">
+                        </diV>
+                    </div>
+                    <div class="my-width-60 column bloc-dev-items">
+                        <h2 class="text-dark-gray-30">
+                            Des développeurs &lt; qualifiés &gt; et prêts à intégrer vos équipes en remote !
+                        </h2>
+                        <div></div>
+                    </div>
+                </div>
+            </div>
         </section>
         <footer class="bg-dark my-footer"></footer>
     </div>
