Modif sur l'index, seconde section, les items

--- a/index.html
+++ b/index.html
@@ -105,7 +105,24 @@
                         <h2 class="text-dark-gray-30">
                             Des développeurs &lt; qualifiés &gt; et prêts à intégrer vos équipes en remote !
                         </h2>
-                        <div></div>
+                        <div class="column">
+                            <div class="row bg-red">
+                                <div class="row dev-item">
+                                    <div>A</div>
+                                </div>
+                                <div class="row dev-item">
+                                    <div>B</div>
+                                </div>
+                            </div>
+                            <div class="row bg-yellow">
+                                <div class="row dev-item">
+                                    <div>C</div>
+                                </div>
+                                <div class="row dev-item">
+                                    <div>D</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
