--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Kinshasa Digital : Agence de développement</title>
 </head>
 
 <body>
     <div id="app" class="column">
+        <!---->
         <header class="bg-red my-header">
             <div class="nav-bar">
+                <!---->
                 <div class="box-logo">
                     <img class="logo" src="img/logo_white.png" alt="">
                 </div>
+                <!---->
+                <!---->
                 <div class="">
                     <nav>
                         <ul class="">
@@ -42,13 +47,20 @@
                         </ul>
                     </nav>
                 </div>
+                <!---->
             </div>
         </header>
+        <!---->
+        <!---->
         <section class="column">
+            <!---->
             <div class="my-hero column">
+                <!---->
                 <h1 class="transform-text-main-title">
                     Besoin de <br />développeurs <br /> <span class="text-gold">&lt; qualifiés &gt; ?</span>
                 </h1>
+                <!---->
+                <!---->
                 <div class="row section-btn-hero">
                     <div>
                         <a class="btn text-red btn-lg bg-light btn-out-line-hover" href="#">PLANIFIER UN APPEL</a>
@@ -57,11 +69,15 @@
                         <a class="btn text-red btn-lg bg-light btn-out-line-hover" href="#">DEMANDER UN DEVIS</a>
                     </div>
                 </div>
+                <!---->
+                <!---->
                 <p class="block-55 text-center">
                     Des développeurs expérimentés prêt à rejoindre votre équipe en
                     full remote et avec les compétences
                     dont vous avez besoin.
                 </p>
+                <!---->
+                <!---->
                 <div class="bloc-techno">
                     <ul class="row content-style-evenly">
                         <li>
@@ -90,9 +106,13 @@
                         </li>
                     </ul>
                 </div>
+                <!---->
             </div>
+            <!---->
+            <!---->
             <div class="bg-gray">
                 <div class="row bloc-dev-qualifies">
+                    <!---->
                     <div class="my-width-40">
                         <diV>
                             <img class="img-back" src="img/illustrations/texaf_campus.jpg" alt="" srcset="">
@@ -101,32 +121,79 @@
                             <img class="img-befor" src="img/illustrations/kda_cohorte_2020.jpg" alt="" srcset="">
                         </diV>
                     </div>
+                    <!---->
+                    <!---->
                     <div class="my-width-60 column bloc-dev-items">
+                        <!---->
                         <h2 class="text-dark-gray-30">
                             Des développeurs &lt; qualifiés &gt; et prêts à intégrer vos équipes en remote !
                         </h2>
+                        <!---->
+                        <!---->
                         <div class="column">
-                            <div class="row bg-red">
-                                <div class="row dev-item">
-                                    <div>A</div>
+                            <!---->
+                            <div class="row">
+                                <!---->
+                                <div class="column dev-item">
+                                    <p class="text-center">
+                                        <img class="paper" src="img/illustrations/paper.svg" alt="">
+                                    </p>
+                                    <div class="my-line"></div>
+                                    <h5 class="text-dark-gray-30 text-center">
+                                        Des développeurs qualifiés
+                                    </h5>
                                 </div>
-                                <div class="row dev-item">
-                                    <div>B</div>
+                                <!---->
+                                <!---->
+                                <div class="column dev-item">
+                                    <p class="text-center">
+                                        <img class="cup" src="img/illustrations/cup.svg" alt="">
+                                    </p>
+                                    <div class="my-line"></div>
+                                    <h5 class="text-dark-gray-30 text-center">
+                                        Des prix compétitifs
+                                    </h5>
                                 </div>
+                                <!---->
                             </div>
-                            <div class="row bg-yellow">
-                                <div class="row dev-item">
-                                    <div>C</div>
+                            <!---->
+                            <!---->
+                            <div class="row">
+                                <!---->
+                                <div class="column dev-item">
+                                    <p class="text-center">
+                                        <img class="paper" src="img/illustrations/chat.svg" alt="">
+                                    </p>
+                                    <div class="my-line"></div>
+                                    <h5 class="text-dark-gray-30 text-center">
+                                        Le français est la langue maternelle
+                                    </h5>
                                 </div>
-                                <div class="row dev-item">
-                                    <div>D</div>
+                                <!---->
+                                <!---->
+                                <div class="column dev-item">
+                                    <p class="text-center">
+                                        <img class="paper" src="img/illustrations/earth.svg" alt="">
+                                    </p>
+                                    <div class="my-line"></div>
+                                    <h5 class="text-dark-gray-30 text-center">
+                                        Sur le même fuseau horaire
+                                    </h5>
                                 </div>
+                                <!---->
                             </div>
+                            <!---->
                         </div>
+                        <!---->
                     </div>
+                    <!---->
                 </div>
             </div>
+            <!---->
+            <!---->
         </section>
+        <!---->
+        <!---->
         <footer class="bg-dark my-footer"></footer>
     </div>
 </body>
