Modif sur l'index, 3 ièm section

--- a/index.html
+++ b/index.html
@@ -191,6 +191,12 @@
             </div>
             <!---->
             <!---->
+            <div class="bg-red avonr-plaisir">
+                <h2 class="text-center text-light">
+                    Nous avons le plaisir de travailler avec
+                </h2>
+            </div>
+            <!---->
         </section>
         <!---->
         <!---->
