--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/slideshow.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Kinshasa Digital : Agence de développement</title>
 </head>
@@ -191,10 +192,31 @@
             </div>
             <!---->
             <!---->
-            <div class="bg-red avonr-plaisir">
+            <div class="bg-red avons-plaisir">
                 <h2 class="text-center text-light">
                     Nous avons le plaisir de travailler avec
                 </h2>
+                <div>
+                    <div id="slideshow">
+                        <div class="slide-wrapper">
+                            <div class="slide">
+                                <h1 class="slide-number">1</h1>
+                            </div>
+                            <div class="slide">
+                                <h1 class="slide-number">2</h1>
+                            </div>
+                            <div class="slide">
+                                <h1 class="slide-number">3</h1>
+                            </div>
+                            <div class="slide">
+                                <h1 class="slide-number">4</h1>
+                            </div>
+                            <div class="slide">
+                                <h1 class="slide-number">5</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!---->
         </section>
