Modif sur l'index, 5 ièm section, il ne reste plus que les icon svg

--- a/index.html
+++ b/index.html
@@ -64,10 +64,14 @@
                 <!---->
                 <div class="row section-btn-hero">
                     <div>
-                        <a class="btn text-red btn-lg bg-light btn-out-line-hover" href="#">PLANIFIER UN APPEL</a>
+                        <a class="btn btn-border-light text-red btn-lg bg-light btn-out-line-light-hover" href="#">
+                            PLANIFIER UN APPEL
+                        </a>
                     </div>
                     <div>
-                        <a class="btn text-red btn-lg bg-light btn-out-line-hover" href="#">DEMANDER UN DEVIS</a>
+                        <a class="btn btn-border-light text-red btn-lg bg-light btn-out-line-light-hover" href="#">
+                            DEMANDER UN DEVIS
+                        </a>
                     </div>
                 </div>
                 <!---->
@@ -192,27 +196,215 @@
             </div>
             <!---->
             <!---->
-            <div class="bg-red avons-plaisir">
+            <div class="bg-red padding-top-down-10">
                 <h2 class="text-center text-light">
                     Nous avons le plaisir de travailler avec
                 </h2>
-                <div>
-                    <div id="slideshow">
-                        <div class="slide-wrapper">
-                            <div class="slide">
-                                <h1 class="slide-number">1</h1>
+                <div class="row content-style-evenly padding-top-down-4">
+                    <p class="text-center">
+                        <img class="logo-partners" src="img/partners/ey-white-2.png" alt="">
+                    </p>
+                    <p class="text-center">
+                        <img class="logo-partners" src="img/partners/texaf-white.png" alt="">
+                    </p>
+                    <p class="text-center">
+                        <img class="logo-partners" src="img/partners/orange-white.png" alt="">
+                    </p>
+                    <p class="text-center">
+                        <img class="logo-partners" src="img/partners/theeconomist.png" alt="">
+                    </p>
+                    <p class="text-center">
+                        <img class="logo-partners" src="img/partners/vodacom-white.png" alt="">
+                    </p>
+                </div>
+            </div>
+            <!---->
+            <!---->
+            <div class="bg-gray padding-top-down-10">
+                <h2 class="text-center text-dark-gray-30">
+                    Nous accompagnons vos projets
+                </h2>
+                <div class="row content-style-evenly padding-top-down-4">
+                    <div class="my-width-45 text-center card-mini bg-light card-mini-border-top-yellow">
+                        <h3 class="text-red">&gt;Réaliser votre projet</h3>
+                        <p>
+                            Engagez une équipe de développeurs de
+                            Kinshasa Digital à un prix fixe pour livrer un
+                            produit final.
+                        </p>
+                        <div class="padding-top-down-4">
+                            <a class="btn btn-border-red text-light btn-lg bg-red btn-out-line-red-hover" href="#">
+                                DEMARRER MAINTENANT
+                            </a>
+                        </div>
+                    </div>
+                    <div class="my-width-45 text-center card-mini bg-light card-mini-border-top-red">
+                        <h3 class="text-red">&gt;Integrer votre équipe</h3>
+                        <p>
+                            Engagez un ou plusieurs développeurs
+                            de Kinshasa Digital à des prix compétitifs pour
+                            rejoindre votre équipe à distance.
+                        </p>
+                        <div class="padding-top-down-4">
+                            <a class="btn btn-border-red text-light btn-lg bg-red btn-out-line-red-hover" href="#">
+                                ENGAGER UN DEVELOPPEUR
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <!---->
+            <div class="bg-red padding-top-down-10">
+                <h2 class="text-center text-light">
+                    Ce que nous avons développé
+                </h2>
+                <div class="row content-style-evenly padding-top-down-4">
+                    <p class="text-center">
+                        <img class="img-works radius-all-10" src="img/works/companyleagues.png" alt="">
+                    </p>
+                    <p class="text-center">
+                        <img class="img-works radius-all-10" src="img/works/covid-dashboard.png" alt="">
+                    </p>
+                    <p class="text-center">
+                        <img class="img-works radius-all-10" src="img/works/elan.png" alt="">
+                    </p>
+                </div>
+            </div>
+            <!---->
+            <!---->
+            <div class="bg-light padding-top-down-10">
+                <h2 class="text-center text-dark-gray-30">
+                    Notre expertise
+                </h2>
+                <div class="row content-style-evenly padding-top-down-4">
+                    <div class="my-width-50 card bg-gray">
+                        <!---->
+                        <h3 class="text-light bg-red card-header">Hardskills</h3>
+                        <!---->
+                        <!---->
+                        <div class="column">
+                            <!---->
+                            <div class="row content-style-evenly">
+                                <!---->
+                                <div class="my-width-20">
+                                    <p class="text-center">
+                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    </p>
+                                    <p class="text-center text-ubuntu-font">HTML</p>
+                                </div>
+                                <!---->
+                                <!---->
+                                <div class="my-width-20">
+                                    <p>
+                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    </p>
+                                    <p class="text-center text-ubuntu-font">CSS</p>
+                                </div>
+                                <!---->
+                                <!---->
+                                <div class="my-width-20">
+                                    <p>
+                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    </p>
+                                    <p class="text-center text-ubuntu-font">PHP</p>
+                                </div>
+                                <!---->
+                                <!---->
+                                <div class="my-width-20">
+                                    <p>
+                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    </p>
+                                    <p class="text-center text-ubuntu-font">Laravel</p>
+                                </div>
+                                <!---->
                             </div>
-                            <div class="slide">
-                                <h1 class="slide-number">2</h1>
+                            <!---->
+                            <!---->
+                            <div class="row content-style-evenly">
+                                <!---->
+                                <div class="my-width-20">
+                                    <p class="text-center">
+                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    </p>
+                                    <p class="text-center text-ubuntu-font">Node.Js</p>
+                                </div>
+                                <!---->
+                                <!---->
+                                <div class="my-width-20">
+                                    <p>
+                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    </p>
+                                    <p class="text-center text-ubuntu-font">JavaScript</p>
+                                </div>
+                                <!---->
+                                <!---->
+                                <div class="my-width-20">
+                                    <p>
+                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    </p>
+                                    <p class="text-center text-ubuntu-font">Vue.Js</p>
+                                </div>
+                                <!---->
+                                <!---->
+                                <div class="my-width-20">
+                                    <p>
+                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    </p>
+                                    <p class="text-center text-ubuntu-font">React</p>
+                                </div>
+                                <!---->
                             </div>
-                            <div class="slide">
-                                <h1 class="slide-number">3</h1>
+                            <!---->
+                            <!---->
+                            <div class="row content-style-evenly">
+                                <!---->
+                                <div class="my-width-20">
+                                    <p class="text-center">
+                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    </p>
+                                    <p class="text-center text-ubuntu-font">MySQL</p>
+                                </div>
+                                <!---->
+                                <!---->
+                                <div class="my-width-20">
+                                    <p>
+                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    </p>
+                                    <p class="text-center text-ubuntu-font">MongoDB</p>
+                                </div>
+                                <!---->
+                                <!---->
+                                <div class="my-width-20">
+                                    <p>
+                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    </p>
+                                    <p class="text-center text-ubuntu-font">neo4j</p>
+                                </div>
+                                <!---->
+                                <!---->
+                                <div class="my-width-20">
+                                    <p>
+                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    </p>
+                                    <p class="text-center text-ubuntu-font">GraphQL</p>
+                                </div>
+                                <!---->
                             </div>
-                            <div class="slide">
-                                <h1 class="slide-number">4</h1>
-                            </div>
-                            <div class="slide">
-                                <h1 class="slide-number">5</h1>
+                            <!---->
+                        </div>
+                    </div>
+                    <div class="my-width-40 card bg-gray">
+                        <h3 class="text-light bg-purpele-dark card-header">Soft Skills</h3>
+                        <div class="padding-all-5">
+                            <div class="padding-all-5 bg-gray-30">
+                                <ol class="text-ubuntu-font">
+                                    <li>Méthodologie agile (SCRUM)</li>
+                                    <li>Travail en équipe</li>
+                                    <li>Habitude du télé-travail</li>
+                                    <li>Gestion du temps</li>
+                                    <li>Pair programming</li>
+                                </ol>
                             </div>
                         </div>
                     </div>
