Modif sur l'index, 5 ièm section, il ne reste plus que les icon svg

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                     <div class="my-width-40 card bg-gray">
                         <h3 class="text-light bg-purpele-dark card-header">Soft Skills</h3>
                         <div class="padding-all-5">
-                            <div class="padding-all-5 bg-gray-30">
+                            <div class="padding-all-5 bg-gray-30 radius-all-10">
                                 <ol class="text-ubuntu-font">
                                     <li>Méthodologie agile (SCRUM)</li>
                                     <li>Travail en équipe</li>
