Modif sur l'index, 8 ièm section, rste plus que les img

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </p>
                 <!---->
                 <!---->
-                <div class="bloc-techno">
+                <div class="row bloc-techno content-style-center">
                     <ul class="row content-style-evenly">
                         <li>
                             <img src="img/technos/nodejs.png" alt="">
@@ -289,31 +289,31 @@
                                 <!---->
                                 <div class="my-width-20">
                                     <p class="text-center">
-                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                        <img class="iconify" src="img/svg/html5.svg" alt="" srcset="">
                                     </p>
                                     <p class="text-center text-ubuntu-font">HTML</p>
                                 </div>
                                 <!---->
                                 <!---->
                                 <div class="my-width-20">
-                                    <p>
-                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    <p class="text-center">
+                                        <img class="iconify" src="img/svg/css.svg" alt="" srcset="">
                                     </p>
                                     <p class="text-center text-ubuntu-font">CSS</p>
                                 </div>
                                 <!---->
                                 <!---->
                                 <div class="my-width-20">
-                                    <p>
-                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    <p class="text-center">
+                                        <img class="iconify" src="img/svg/php.svg" alt="" srcset="">
                                     </p>
                                     <p class="text-center text-ubuntu-font">PHP</p>
                                 </div>
                                 <!---->
                                 <!---->
                                 <div class="my-width-20">
-                                    <p>
-                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    <p class="text-center">
+                                        <img class="iconify" src="img/svg/laravel.svg" alt="" srcset="">
                                     </p>
                                     <p class="text-center text-ubuntu-font">Laravel</p>
                                 </div>
@@ -325,31 +325,31 @@
                                 <!---->
                                 <div class="my-width-20">
                                     <p class="text-center">
-                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                        <img class="iconify" src="img/svg/nodejs.svg" alt="" srcset="">
                                     </p>
                                     <p class="text-center text-ubuntu-font">Node.Js</p>
                                 </div>
                                 <!---->
                                 <!---->
                                 <div class="my-width-20">
-                                    <p>
-                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    <p class="text-center">
+                                        <img class="iconify" src="img/svg/javascript.svg" alt="" srcset="">
                                     </p>
                                     <p class="text-center text-ubuntu-font">JavaScript</p>
                                 </div>
                                 <!---->
                                 <!---->
                                 <div class="my-width-20">
-                                    <p>
-                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    <p class="text-center">
+                                        <img class="iconify" src="img/svg/vuejs.svg" alt="" srcset="">
                                     </p>
                                     <p class="text-center text-ubuntu-font">Vue.Js</p>
                                 </div>
                                 <!---->
                                 <!---->
                                 <div class="my-width-20">
-                                    <p>
-                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    <p class="text-center">
+                                        <img class="iconify" src="img/svg/reactjs.svg" alt="" srcset="">
                                     </p>
                                     <p class="text-center text-ubuntu-font">React</p>
                                 </div>
@@ -361,31 +361,31 @@
                                 <!---->
                                 <div class="my-width-20">
                                     <p class="text-center">
-                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                        <img class="iconify" src="img/svg/mysql.svg" alt="" srcset="">
                                     </p>
                                     <p class="text-center text-ubuntu-font">MySQL</p>
                                 </div>
                                 <!---->
                                 <!---->
                                 <div class="my-width-20">
-                                    <p>
-                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    <p class="text-center">
+                                        <img class="iconify" src="img/svg/mongodb.svg" alt="" srcset="">
                                     </p>
                                     <p class="text-center text-ubuntu-font">MongoDB</p>
                                 </div>
                                 <!---->
                                 <!---->
                                 <div class="my-width-20">
-                                    <p>
-                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    <p class="text-center">
+                                        <img class="iconify" src="img/svg/neo4j.svg" alt="" srcset="">
                                     </p>
                                     <p class="text-center text-ubuntu-font">neo4j</p>
                                 </div>
                                 <!---->
                                 <!---->
                                 <div class="my-width-20">
-                                    <p>
-                                        <img class="iconify" src="img/technos/laravel.png" alt="" srcset="">
+                                    <p class="text-center">
+                                        <img class="iconify" src="img/svg/graphql.svg" alt="" srcset="">
                                     </p>
                                     <p class="text-center text-ubuntu-font">GraphQL</p>
                                 </div>
@@ -406,6 +406,158 @@
                                     <li>Pair programming</li>
                                 </ol>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <!---->
+            <div class="bg-red-dark padding-top-down-10">
+                <h2 class="text-center text-light">
+                    Pret ?
+                </h2>
+                <div class="row content-style-center padding-top-down-4 text-light text-ubuntu-font">
+                    <!---->
+                    <div class="row margin-left-right-20">
+                        <div class="">
+                            <p class="text-center bloc-bordered-1 radius-all-10">
+                                <img class="iconify-min" src="img/illustrations/call.png" alt="">
+                            </p>
+                            <p class="text-center">
+                                Appel d'introduction
+                            </p>
+                        </div>
+                        <div>
+                            <p class="bloc-50-px">
+                                <img class="iconify-min" src="img/illustrations/arrow.png" alt="">
+                            </p>
+                        </div>
+                    </div>
+                    <!---->
+                    <!---->
+                    <div class="row margin-left-right-20">
+                        <div class="">
+                            <p class="text-center bloc-bordered-1 radius-all-10">
+                                <img class="iconify-min" src="img/illustrations/users.png" alt="">
+                            </p>
+                            <p class="text-center">
+                                Proposition de profils
+                            </p>
+                        </div>
+                        <div>
+                            <p class="bloc-50-px">
+                                <img class="iconify-min" src="img/illustrations/arrow.png" alt="">
+                            </p>
+                        </div>
+                    </div>
+                    <!---->
+                    <!---->
+                    <div class="row margin-left-right-20">
+                        <div class="">
+                            <p class="text-center bloc-bordered-1 radius-all-10">
+                                <img class="iconify-min" src="img/illustrations/call.png" alt="">
+                            </p>
+                            <p class="text-center">
+                                Interviews vidéo
+                            </p>
+                        </div>
+                        <div>
+                            <p class="bloc-50-px-min-width">
+                                <img class="iconify-min" src="img/illustrations/arrow.png" alt="">
+                            </p>
+                        </div>
+                    </div>
+                    <!---->
+                    <!---->
+                    <div class="row margin-left-right-20">
+                        <div class="">
+                            <p class="text-center bloc-bordered-1 radius-all-10">
+                                <img class="iconify-min" src="img/illustrations/user_group.png" alt="">
+                            </p>
+                            <p class="text-center">
+                                Onboarding
+                            </p>
+                        </div>
+                    </div>
+                    <!---->
+                </div>
+                <div class="padding-top-down-4">
+                    <p class="text-center">
+                        <a class="btn btn-border-red text-light btn-lg bg-red btn-out-line-red-2-hover" href="#">
+                            PLANIFIER UN APPEL
+                        </a>
+                    </p>
+                </div>
+            </div>
+            <!---->
+            <!---->
+            <div class="row content-style-center bg-gray padding-top-down-10">
+                <div class="my-width-30">
+                    <h3>
+                        Nous créons de l' <span class="text-red">emploi de qualité</span>
+                        en République Démocratique du Congo
+                    </h3>
+                    <p>
+                        Nous sommes fiers de vous proposer un service
+                        de qualité qui permet de créer des emplois pour
+                        les talents de la RDC tout en offrant une
+                        formation d'excellence à de nouveaux jeunes
+                        développeurs chaque année
+                    </p>
+                    <p>
+                        <img class="my-width-100" src="img/students.png" alt="">
+                    </p>
+                </div>
+                <div class="column my-width-50 content-style-evenly">
+                    <div class="row content-style-evenly">
+                        <div class="my-width-40 my-heigth-50 bg-light radius-all-10 margin-all-10 padding-all-1">
+                            <p>IMG</p>
+                            <h5>
+                                Rémunération
+                                ultra compétitive
+                            </h5>
+                            <p>
+                                Un salaire 5x supérieur au
+                                salaire moyen de la RDC.
+                            </p>
+                        </div>
+                        <div class="my-width-40 my-heigth-50 bg-light radius-all-10 margin-all-10 padding-all-1">
+                            <p>IMG</p>
+                            <h5>
+                                Infrastructure pro
+                            </h5>
+                            <p>
+                                Un environnement de
+                                travail de haute qualité avec
+                                connexion internet haut
+                                débit et une cantine offerte.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row content-style-evenly">
+                        <div class="my-width-40 my-heigth-50 bg-light radius-all-10 margin-all-10 padding-all-1">
+                            <p>IMG</p>
+                            <h5>
+                                Couverture santé
+                            </h5>
+                            <p>
+                                Une couverture santé pour
+                                le développeur et sa famille
+                                dans le meilleur hopital de
+                                Kinshasa
+                            </p>
+                        </div>
+                        <div class="my-width-40 my-heigth-50 bg-light radius-all-10 margin-all-10 padding-all-1">
+                            <p>IMG</p>
+                            <h5>
+                                Formation continue
+                            </h5>
+                            <p>
+                                Via la KDA et des mentors
+                                de renommée mondiale de
+                                Facebook, Microsoft, Adobe
+                                & Google.
+                            </p>
                         </div>
                     </div>
                 </div>
