Modif sur l'index, 8 ièm section, reste plus que les img | création page emploi et mis en forme des deux block

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/slideshow.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Kinshasa Digital : Agence de développement</title>
 </head>
@@ -26,7 +25,7 @@
                     <nav>
                         <ul class="">
                             <li>
-                                <a class="nav-active" href="#">
+                                <a class="nav-active" href="index.html">
                                     Accueil
                                 </a>
                             </li>
@@ -36,7 +35,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="emploi.html">
                                     Emploi
                                 </a>
                             </li>
@@ -53,7 +52,7 @@
         </header>
         <!---->
         <!---->
-        <section class="column">
+        <section class="column main">
             <!---->
             <div class="my-hero column">
                 <!---->
